--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/pngwing.com.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website | Name</title>
+    <title>Kursus Online</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/app/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
